type checker almost done missing: functionCall em boolean expressions expressions e functioncalls em return statements